--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -62,21 +62,21 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\CameraMovement.cs" />
-    <Compile Include="Assets\EnemyPatroller.cs" />
-    <Compile Include="Assets\MainMenu.cs" />
     <Compile Include="Assets\Scripts\Attack.cs" />
     <Compile Include="Assets\Scripts\Bullet.cs" />
+    <Compile Include="Assets\Scripts\CameraMovement.cs" />
     <Compile Include="Assets\Scripts\Enemy.cs" />
+    <Compile Include="Assets\Scripts\EnemyPatroller.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\HopeManager.cs" />
     <Compile Include="Assets\Scripts\HopeMeter.cs" />
+    <Compile Include="Assets\Scripts\MainMenu.cs" />
     <Compile Include="Assets\Scripts\Player.cs" />
+    <Compile Include="Assets\Scripts\ShakeBehaviour.cs" />
     <Compile Include="Assets\Scripts\Slash.cs" />
-    <Compile Include="Assets\ShakeBehaviour.cs" />
+    <Compile Include="Assets\Scripts\Uphope.cs" />
     <Compile Include="Assets\Test Garbage\FreePixelMob\Mobs.cs" />
     <Compile Include="Assets\Test Garbage\FreePixelMob\StateRandom.cs" />
-    <Compile Include="Assets\Uphope.cs" />
     <None Include="Assets\Test Garbage\FreePixelMob\ReadMe.txt" />
     <Reference Include="Unity.Timeline.Editor">
       <HintPath>E:/Documents/GitHub/HopeGame/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
