Fixed hope meter

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -86,15 +86,15 @@
     <Compile Include="Assets\Anima2D\Scripts\SpriteMesh.cs" />
     <Compile Include="Assets\Anima2D\Scripts\SpriteMeshAnimation.cs" />
     <Compile Include="Assets\Anima2D\Scripts\SpriteMeshInstance.cs" />
-    <Compile Include="Assets\Background.cs" />
-    <Compile Include="Assets\EnemyGroundSensor.cs" />
-    <Compile Include="Assets\EnemyWallSensor.cs" />
     <Compile Include="Assets\Scripts\Actor.cs" />
     <Compile Include="Assets\Scripts\Attack.cs" />
+    <Compile Include="Assets\Scripts\Background.cs" />
     <Compile Include="Assets\Scripts\Bullet.cs" />
     <Compile Include="Assets\Scripts\CameraMovement.cs" />
     <Compile Include="Assets\Scripts\Enemy.cs" />
+    <Compile Include="Assets\Scripts\EnemyGroundSensor.cs" />
     <Compile Include="Assets\Scripts\EnemyPatroller.cs" />
+    <Compile Include="Assets\Scripts\EnemyWallSensor.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\HopeManager.cs" />
     <Compile Include="Assets\Scripts\HopeMeter.cs" />
@@ -102,8 +102,8 @@
     <Compile Include="Assets\Scripts\Player.cs" />
     <Compile Include="Assets\Scripts\ShakeBehaviour.cs" />
     <Compile Include="Assets\Scripts\Slash.cs" />
+    <Compile Include="Assets\Scripts\SpriteMeshContainer.cs" />
     <Compile Include="Assets\Scripts\Uphope.cs" />
-    <Compile Include="Assets\SpriteMeshContainer.cs" />
     <Compile Include="Assets\Test Garbage\FreePixelMob\Mobs.cs" />
     <Compile Include="Assets\Test Garbage\FreePixelMob\StateRandom.cs" />
     <None Include="Assets\Anima2D\Examples\Shaders\VisibleInsideMask.shader" />
