--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -110,10 +110,10 @@
     <Compile Include="Assets\Scripts\HopeMeter.cs" />
     <Compile Include="Assets\Scripts\MainMenu.cs" />
     <Compile Include="Assets\Scripts\Player.cs" />
-    <Compile Include="Assets\Scripts\ShakeBehaviour.cs" />
     <Compile Include="Assets\Scripts\Slash.cs" />
     <Compile Include="Assets\Scripts\SpriteMeshContainer.cs" />
     <Compile Include="Assets\Scripts\Uphope.cs" />
+    <Compile Include="Assets\Timer.cs" />
     <None Include="Assets\Asset References.txt" />
     <None Include="Assets\Anima2D\Examples\Shaders\VisibleInsideMask.shader" />
     <None Include="Assets\Anima2D\Examples\Shaders\VisibleOutsideMask.shader" />
