--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -86,7 +86,6 @@
     <Compile Include="Assets\Anima2D\Scripts\SpriteMesh.cs" />
     <Compile Include="Assets\Anima2D\Scripts\SpriteMeshAnimation.cs" />
     <Compile Include="Assets\Anima2D\Scripts\SpriteMeshInstance.cs" />
-    <Compile Include="Assets\PauseMenu.cs" />
     <Compile Include="Assets\Scripts\Actor.cs" />
     <Compile Include="Assets\Scripts\AudioLibrary.cs" />
     <Compile Include="Assets\Scripts\AudioList.cs" />
@@ -109,12 +108,13 @@
     <Compile Include="Assets\Scripts\HopeManager.cs" />
     <Compile Include="Assets\Scripts\HopeMeter.cs" />
     <Compile Include="Assets\Scripts\MainMenu.cs" />
+    <Compile Include="Assets\Scripts\PauseMenu.cs" />
     <Compile Include="Assets\Scripts\Player.cs" />
     <Compile Include="Assets\Scripts\Slash.cs" />
     <Compile Include="Assets\Scripts\SpriteMeshContainer.cs" />
+    <Compile Include="Assets\Scripts\Timer.cs" />
     <Compile Include="Assets\Scripts\Uphope.cs" />
-    <Compile Include="Assets\Timer.cs" />
-    <Compile Include="Assets\WinText.cs" />
+    <Compile Include="Assets\Scripts\WinText.cs" />
     <None Include="Assets\Asset References.txt" />
     <None Include="Assets\Anima2D\Examples\Shaders\VisibleInsideMask.shader" />
     <None Include="Assets\Anima2D\Examples\Shaders\VisibleOutsideMask.shader" />
